# fastapi-template

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/contracts/: create_link_api.py  link_api.py
app/infrastructure/database/: utils.py
app/infrastructure/database/migrations/: env.py
app/infrastructure/database/migrations/versions/: 07da75c5317b_add_link_table.py  32da89362c76_create_shortener_schema.py  43c111416eb0_add_link_table.py  d50ad4f690c8_add_link_table.py  ea3ec0051540_add_link_table.py
app/infrastructure/database/models/: link.py
app/infrastructure/repositories/: link_repository.py
app/mappers/: link_api_mapper.py
app/routers/: links.py
app/services/: exceptions.py  link_service.py
dockerfiles/: Controller.Dockerfile  Migrations.Dockerfile
tests/: conftest.py
tests/endpoints/: test_links.py
