[project]
name = "fastapi-template"
version = "0.1.0"
description = "Backend template using FastAPI, PostgreSQL and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.9",
]
