[project]
name = "fastapi-template"
version = "0.1.0"
description = "Backend template using FastAPI, PostgreSQL and SQLAlchemy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "psycopg>=3.2.5",
    "psycopg-binary>=3.2.5",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy[asyncio]>=2.0.38",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.9",
]
migrations = [
    "alembic>=1.14.1",
]

[tool.mypy]
plugins = ['pydantic.mypy']
